tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_base_classes_common_parent_positional_non_exh2.sk
base class A(Int)
base class LA extends A
base class RA extends A
base class LRA(sk: Bool) extends RA
base class RRA(ry: String) extends RA
class JRA(rt: Int) extends LRA, RRA

base class LLA(lx: Bool) extends LA
base class RLA(ly: String) extends LA
class JLA(lt: Int) extends LLA, RLA

fun myMatch(x: A): String {
  x match {
  | LA _ -> "Pa"
  | LRA(true, _) -> "ss\n"
  }
}
